Crud de productos

--- a/Proyecto_Grupal_Inventario/Proyecto_Grupal_Inventario.csproj
+++ b/Proyecto_Grupal_Inventario/Proyecto_Grupal_Inventario.csproj
@@ -171,6 +171,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Producto\MostrarProductos.cshtml" />
+    <Content Include="Views\Producto\CreateOrEditProductos.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
